# bullbear-ai-trader

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml  promotion_policy.yaml  rollback_policy.yaml  synthetic.yaml
deploy/: com.bullbear.dualmomentum.plist  com.bullbear.evolution.plist  com.bullbear.paper.plist  run-dual-momentum-launchd.sh  run-evolution-launchd.sh  run-paper-launchd.sh
docs/: ai_trader_integration.md
scripts/: dual_momentum_backtest.py  edge_lab.py  run_demo.sh  run_paper_once.sh
src/: cli.py  pipeline.py
src/agents/: __init__.py  analysis_schema.py  base.py  context.py  external_agent.py  factory.py  hybrid_agent.py  local_model_agent.py  mock_agent.py  news_store.py  replay_agent.py  rule_agent.py  (+1 more)
tests/: conftest.py  test_agent_context_no_leak.py  test_agents.py  test_backtest.py  test_dashboard_copy.py  test_dashboard_smoke.py  test_diary.py  test_doctor.py  test_dual_momentum.py  test_dual_momentum_runner.py  test_evolution.py  test_evolution_evidence.py  test_feature_health.py  test_history_db.py  test_labels.py  test_live_evolution.py  test_live_feed.py  test_live_shadow.py  test_market_calendar.py  test_mutation_diversity.py  test_no_leak.py  test_numeric_genes.py  test_opencode_agent.py  test_opencode_analysis.py  test_paper_accounting.py  test_paper_runner.py  test_risk.py  test_runner_control.py  test_runs.py  test_safety.py  test_settings.py  test_signal_fusion.py  test_signal_schema.py  test_sizing.py  test_sqlite_cache.py  test_technical_strategies.py
(+73 files in other folders)
