[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bullbear-ai-trader"
version = "0.1.0"
description = "Backtest-only AI day-trading system for US leveraged ETFs (TQQQ/SQQQ/SOXL/SOXS). No live trading."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "yfinance>=0.2.40",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
lgbm = ["lightgbm>=4.0"]
dashboard = ["streamlit>=1.30"]
dev = ["pytest>=7.4", "streamlit>=1.30"]

[project.scripts]
bullbear = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
